--- a/crypto/test/Makefile
+++ b/crypto/test/Makefile
@@ -22,12 +22,18 @@ include $(MATRIXSSL_ROOT)/common.mk
 # Linked files
 STATICS:=../libcrypt_s.a $(MATRIXSSL_ROOT)/core/libcore_s.a
 
+DIRS:=rsaperf eccperf dhperf
+
+.PHONY: $(DIRS) clean
+
 all: compile
 
-compile: $(OBJS) $(EXE)
-	$(MAKE) --directory=rsaperf
-	$(MAKE) --directory=eccperf
-	$(MAKE) --directory=dhperf
+compile: $(OBJS) $(EXE) $(DIRS)
+
+# Note this requires MAKECMDGOALS to be defined by make,
+# otherwise clean target doesn't work
+$(DIRS):
+	$(MAKE) $(MAKECMDGOALS) --directory=$@
 
 # Additional Dependencies
 $(OBJS): $(MATRIXSSL_ROOT)/common.mk Makefile $(wildcard *.h)
@@ -38,9 +44,6 @@ $(SPEED_EXE): $(SPEED_SRC:.c=.o) $(STATICS)
 $(VECTOR_EXE): $(VECTOR_SRC:.c=.o) $(STATICS)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-clean:
+clean: $(DIRS)
 	rm -f $(EXE) $(OBJS)
-	$(MAKE) clean --directory=rsaperf
-	$(MAKE) clean --directory=eccperf
-	$(MAKE) clean --directory=dhperf
 
