--- a/matrixssl/Makefile
+++ b/matrixssl/Makefile
@@ -35,9 +35,9 @@ compile: $(OBJS) $(STATIC)
 $(OBJS): $(MATRIXSSL_ROOT)/common.mk Makefile *.h
 
 # Build the static library
-# Redirect stderr to null so we don't see the 'empty file' warnings
+
 $(STATIC): $(OBJS)
-	$(AR) -rcuv $@ $^ 2>/dev/null
+	$(AR) -rcu $@ $^
 
 clean:
 	rm -f $(STATIC) $(OBJS)
