--- a/matrixssl/test/Makefile
+++ b/matrixssl/test/Makefile
@@ -9,22 +9,31 @@ TEST_SRC:=sslTest.c
 CERT_SRC:=certValidate.c
 SRC:=$(TEST_SRC) $(CERT_SRC)
 
+# Linked files
+STATIC:=../libssl_s.a $(MATRIXSSL_ROOT)/crypto/libcrypt_s.a $(MATRIXSSL_ROOT)/core/libcore_s.a
+
 include $(MATRIXSSL_ROOT)/common.mk
+
+# Include possible additional MatrixSSL test program build instructions
+-include Makefile.add
 
 # Generated files
 CERT_EXE:=certValidate$(E)
 TEST_EXE:=sslTest$(E)
 
-# Linked files
-STATIC:=../libssl_s.a $(MATRIXSSL_ROOT)/crypto/libcrypt_s.a $(MATRIXSSL_ROOT)/core/libcore_s.a
+ifeq '$(CL_NO_PKCS)' ''
+CFLAGS+=-DUSE_CL_PKCS -DUSE_CL_CERTLIB
+endif
 
 # Generate map file with sections and C source reference for sslTest
 ifndef MATRIX_DEBUG
 ifeq (,$(findstring -apple,$(CCARCH)))
+ifeq (,$(findstring -android,$(CCARCH)))
 LDFLAGS += \
  -Wl,--cref \
  -Wl,-s \
  -Wl,-Map="$@.map"
+endif
 endif
 endif
 
@@ -42,5 +51,9 @@ $(CERT_EXE):$(CERT_SRC:.c=.o) $(STATIC)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 clean:
-	rm -f $(TEST_EXE) $(CERT_EXE) $(OBJS) *.map
+	rm -f $(TEST_EXE) $(CERT_EXE) $(OBJS) $(CLEAN_EXTRA_FILES) *.map
+
+# Allows to check configuration options.
+parse-config:
+	echo '#include "matrixsslConfig.h"' | $(CC) $(CFLAGS) -dM -E -x c -
 
